# final-project-chem7870

./: LICENSE  README.md  pyproject.toml  test_msd_analysis.py
code/: msd_analysis_protein.py
examples/: histone.csv  histone_H3.csv  message.txt
tests/: test_msd_analysis.py
