[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brownian_motion"
version = "0.0.1"
authors = [
    { name = "Aakash Gupta", email = "ag2636@cornell.edu" },
    { name = "Hruidya Babu", email = "hc2258@cornell.edu" },
    { name = "Jyotirsika Dalal", email = "jd2339@cornell.edu" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "pytest",
    "scipy",
]
